--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,210 +1,100 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: sans-serif;
+}
 
-  
-  /* helpers/align.css */
-  
-  .align {
-    display: grid;
-    place-items: center;
-  }
-  
-  /* helpers/grid.css */
-  
-  :root {
-    --gridMaxWidth: 24em;
-    --gridWidth: 90%;
-  }
-  
-  .grid {
-    inline-size: var(--gridWidth);
-    margin-inline: auto;
-    max-inline-size: var(--gridMaxWidth);
-  }
-  
-  /* helpers/icon.css */
-  
-  .icon {
-    block-size: 1.25em;
-    display: inline-block;
-    inline-size: 1.25em;
-    line-height: 1.25em;
-    margin-right: 0.625em;
-    text-align: center;
-    vertical-align: middle;
-  }
-  
-  .icon--info {
-    background-color: #e5e5e5;
-    border-radius: 50%;
-  }
-  
-  /* layout/base.css */
-  
-  :root {
-    --bodyBackgroundColor: #eaeaea;
-    --bodyColor: #999;
-    --bodyFontFamily: 'Helvetica', 'Arial';
-    --bodyFontFamilyFallback: sans-serif;
-    --bodyFontSize: 0.875rem;
-    --bodyFontWeight: 400;
-    --bodyLineHeight: 1.5;
-  }
-  
-  *,
-  *::before,
-  *::after {
-    box-sizing: inherit;
-  }
-  
-  html {
-    box-sizing: border-box;
-  }
-  
-  body {
-    background-color: var(--bodyBackgroundColor);
-    font-family: var(--bodyFontFamily), var(--bodyFontFamilyFallback);
-    font-size: var(--bodyFontSize);
-    font-weight: var(--bodyFontWeight);
-    line-height: var(--bodyLineHeight);
-    margin: 0;
-    min-block-size: 100vh;
-  }
-  
-  /* modules/anchor.css */
-  
-  :root {
-    --anchorColor: inherit;
-    --anchorHoverColor: #1dabb8;
-  }
-  
-  a {
-    color: var(--anchorColor);
-    text-decoration: none;
-    transition: color 0.3s;
-  }
-  
-  a:hover {
-    color: var(--anchorHoverColor);
-  }
-  
-  /* modules/form.css */
-  
-  fieldset {
-    border: none;
-    margin: 0;
-  }
-  
-  input {
-    appearance: none;
-    border: none;
-    font: inherit;
-    margin: 0;
-    outline: none;
-    padding: 0;
-  }
-  
-    .form input[type='password'] {
-    inline-size: 100%;
-  }
-  
-  /* modules/login.css */
-  
-  :root {
-    --loginBorderRadius: 0.25em;
-    --loginHeaderBackgroundColor: #282830;
-  
-    --loginInputBorderRadius: 0.25em;
-  }
-  
-  .login__header {
-    background-color: var(--loginHeaderBackgroundColor);
-    border-top-left-radius: var(--loginBorderRadius);
-    border-top-right-radius: var(--loginBorderRadius);
-    color: #fff;
-    padding: 1.5em;
-    text-align: center;
-    text-transform: uppercase;
-  }
-  
-  .login__title {
-    font-size: 1rem;
-    margin: 0;
-  }
-  
-  .login__body {
-    background-color: #fff;
-    padding: 40px;
-    position: relative;
-  }
-  
-  .login__body::before {
-    background-color: #fff;
-    content: '';
-    height: 0.5em;
-    left: 50%;
-    margin-left: -0.25em;
-    margin-top: -0.25em;
-    position: absolute;
-    top: 0;
-    transform: rotate(45deg);
-    width: 0.5em;
-  }
-  
+html, body {
+  display: grid;
+  height: 100%;
+  place-items: center;
+  text-align: center;
+  background: #171923;
+  color: #fff;
+}
 
-  .login input[type='password'] {
-    border: 0.0625em solid #e5e5e5;
-    padding: 1em 1.25em;
-  }
-  
-  
-  .login input[type='password'] {
-    border-bottom-left-radius: var(--loginInputBorderRadius);
-    border-bottom-right-radius: var(--loginInputBorderRadius);
-    border-top: 0;
-  }
-  
- 
-  
-  .login__footer {
-    align-items: center;
-    background-color: #fff;
-    border-bottom-left-radius: var(--loginBorderRadius);
-    border-bottom-right-radius: var(--loginBorderRadius);
-    display: flex;
-    justify-content: space-between;
-    padding-bottom: 1.5em;
-    padding-left: 1.5em;
-    padding-right: 1.5em;
-  }
-  
-  .login__footer p {
-    margin: 0;
-  }
+.container {
+  width: 420px;
+  background: #2d2d30;
+  padding: 20px 30px;
+  border-radius: 5px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+}
 
-  .password-strength-bar {
-    height: 10px;
-    width: 0; /* Começa sem largura */
-    border-radius: 5px;
-    margin-top: 10px;
-    transition: width 0.3s; /* Transição suave */
-  }
-  .password-strength-bar {
-    height: 10px;
-    margin-top: 10px;
-    border-radius: 5px;
-  }
-  
-  .password-strength-text {
-    margin-top: 10px;
-    font-weight: bold;
-  }
-  
-  .pontuacao-text {
-    margin-top: 10px;
-    font-weight: bold;
-  }
-  
-  
-  /* Estilos para a barra de força de senha */
-  #passwordStrengthBar {
-    width: 0;
-  }
+.container header {
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 50px;
+}
+
+.container form {
+  margin: 20px 5px 10px 5px;
+}
+
+form .field {
+  height: 45px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+form .field input {
+  height: 100%;
+  width: 100%;
+  border: 1px solid lightgrey;
+  padding-left: 15px;
+  outline: none;
+  border-radius: 5px;
+  font-size: 25px;
+  transition: all 0.3s;
+}
+
+.indicator {
+  display: none; /* Inicialmente oculta a barra de força e a palavra de indicação */
+}
+
+.password-strength {
+  height: 12px; /* Aumenta a altura da barra de força */
+  width: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.password-strength div {
+  flex-grow: 1;
+  height: 100%;
+  transition: width 0.3s ease;
+  border-radius: 5px;
+}
+
+.password-strength .weak {
+  background-color: rgb(236, 0, 0);
+}
+
+.password-strength .medium {
+  background-color: rgb(241, 106, 3);
+}
+
+.password-strength .strong {
+  background-color: rgb(109, 251, 0);
+}
+
+.text {
+  font-size: 20px;
+  font-weight: 500;
+  display: none; /* Inicialmente oculta a palavra de indicação */
+  margin-top: 5px; /* Adiciona espaço acima da palavra de indicação */
+}
+
+.text.fraco {
+  color: rgb(236, 0, 0);
+}
+
+.text.moderado {
+  color: rgb(241, 106, 3);
+}
+
+.text.forte {
+  color: rgb(109, 251, 0);
+}
